# CTIA

./: .env.example  .gitignore  DESIGN_NOTE.md  README.md  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
frontend/: package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: use-chat.ts
frontend/lib/: api.ts  session.ts  types.ts
mock_data/: abuseipdb_ip.json  mitre_attack_groups.json  nvd_cve.json  otx_actor.json  shodan_host.json  virustotal_ip.json
scripts/: deploy.sh
src/: __init__.py  cli.py  config.py  logging_config.py
src/agent/: __init__.py  graph.py  llm.py  router.py  state.py
src/api/: __init__.py  __main__.py  app.py  deps.py  schemas.py  sessions.py
src/models/: __init__.py  common.py  exposure.py  intent.py  ioc.py  threat.py
src/security/: __init__.py  auth.py  input_guard.py  output_guard.py
src/tools/: __init__.py  abuseipdb.py  alienvault.py  base.py  mitre_attack.py  nvd.py  shodan.py  virustotal.py
tests/: __init__.py  conftest.py
tests/eval/: __init__.py  eval_harness.py
tests/integration/: __init__.py  test_agent_flows.py  test_api_auth.py  test_api_chat.py
tests/unit/: __init__.py  test_agent_llm.py  test_agent_state.py  test_api_schemas.py  test_api_sessions.py  test_cli.py  test_config.py  test_injection_detection.py  test_intent_routing.py  test_logging_config.py  test_models_common.py  test_models_exposure.py  test_models_intent.py  test_models_ioc.py  test_models_threat.py  test_nodes_actor_ttp.py  test_nodes_clarification.py  test_nodes_exposure.py  test_nodes_fallback.py  test_nodes_greeting.py  test_nodes_intent.py  test_nodes_ioc_lookup.py  test_nodes_pivot.py  test_nodes_resolver.py  test_nodes_sanitizer.py  test_nodes_synthesizer.py  test_output_guard.py  test_security_auth.py  test_tools_abuseipdb.py  test_tools_alienvault.py  test_tools_base.py  test_tools_mitre_attack.py  (+3 more)
(+24 files in other folders)
